--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h2>About Me</h2>
 	<p>Recent graduate from the University of Minnesota with a bachelors in Electrical Engineering and minor in Business. Currently exploring new career opportunities.</p>
 	<h2>Resume</h2>
-	<p><a href="Noble Koshy's Resume Linkedin.pdf">PDF</a><p>
+	<p><a href="Resume">PDF</a><p>
 	<p><a href="https://www.linkedin.com/in/noble-koshy/">Linkedin</a></p>
 </body>
 </html>
