--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<h2>About Me</h2>
 	<p>Recent graduate from the University of Minnesota with a bachelors in Electrical Engineering and minor in Business. Currently exploring new career opportunities.</p>
 	<h2>Resume</h2>
-	<p><a href="noblekoshy.github.io/Resume.pdf">PDF</a><p>
-	<p><a href="https://www.linkedin.com/in/noble-koshy/">Linkedin</a></p>
-</body>
+	<p><a href="noblekoshy.github.io/Resume.pdf">Resume PDF</a><p>
+	<p><a href="https://www.linkedin.com/in/noble-koshy/">Linkedin Profile</a></p>
+	<h3>Projects</h3>
+	<p>Undergraduate Capstone Project: Facial Recongition Robot Platform <a href="noblekoshy.github.io/CapstoneProject_ProductLaunchPresentation.pdf">Product Launch Presenation </a> <a href="noblekoshy.github.io/CapstoneProject_Poster.pdf">Poster </a> <a href="noblekoshy.github.io/CapstoneProject_Report.pdf">Final Report</a></p>
 </html>
