--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<h2>Resume</h2>
 	<p><a href="noblekoshy.github.io/Resume.pdf">Resume PDF</a><p>
 	<p><a href="https://www.linkedin.com/in/noble-koshy/">Linkedin Profile</a></p>
-	<h3>Projects</h3>
-	<p>Undergraduate Capstone Project: Facial Recongition Robot Platform <a href="noblekoshy.github.io/CapstoneProject_ProductLaunchPresentation.pdf">Product Launch Presenation </a> <a href="noblekoshy.github.io/CapstoneProject_Poster.pdf">Poster </a> <a href="noblekoshy.github.io/CapstoneProject_Report.pdf">Final Report</a></p>
+	<h2>Projects</h2>
+	<p>Undergraduate Capstone Project: Facial Recongition Robot Platform</p>
+	<ul>
+		<li><a href="noblekoshy.github.io/CapstoneProject_ProductLaunchPresentation.pdf">Presenation</a> &nbsp; <a href="noblekoshy.github.io/CapstoneProject_Poster.pdf">Poster</a> &nbsp; <a href="noblekoshy.github.io/CapstoneProject_Report.pdf">Final Report</a></li>
 </html>
