--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<meta charset="utf-8">
 	<title>Noble Koshy</title>
 </head>
+<style type="text/css">
+	body {
+		font-family: monospace;
+	}
+</style>
 <body>
 	<h1>Noble Koshy</h1>
 	<p><img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAtYAAAAJGI4OGNlZDhiLTA2N2MtNGU4Ni1iZGRjLWEzMjI2OGU4NmQwMg.jpg" alt="Profile Picture"></p>
