--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Noble Koshy</title>
+	<link rel="icon" href="noblekoshy.github.io/favicon.PNG">
 </head>
 <style type="text/css">
 	body {
