--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<h1>Noble Koshy</h1>
 	<p><img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAtYAAAAJGI4OGNlZDhiLTA2N2MtNGU4Ni1iZGRjLWEzMjI2OGU4NmQwMg.jpg" alt="Profile Picture"></p>
 	<h2>About Me</h2>
-	<p>Recent graduate from the University of Minnesota with a bachelors in Electrical Engineering and minor in Business. Currently exploring new career opportunities.</p>
+	<p>I am a recent graduate from the University of Minnesota. I graduated with a bachelors in Electrical Engineering and a minor in Business. I have always been interested in technology and how it is transforming out world. I remember growing up with just a simple desktop computer in my home (a HP Pavilion running Windows ME to be precise). Now I see my home filled with smartphones, laptops, tablets, and other smart devices. My educational background has given me a solid background in how such devices and other technologies work both on a hardware and software level. I am now seeking new career opportunities to expand and grow my knowledge. </p>
 	<h2>Resume</h2>
 	<p><a href="noblekoshy.github.io/Resume.pdf">Resume PDF</a><p>
 	<p><a href="https://www.linkedin.com/in/noble-koshy/">Linkedin Profile</a></p>
