--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="utf-8">
 	<title>Noble Koshy</title>
-	<link rel="icon" href="noblekoshy.github.io/favicon.PNG">
 </head>
 <style type="text/css">
 	body {
@@ -12,9 +11,9 @@
 </style>
 <body>
 	<h1>Noble Koshy</h1>
-	<p><img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAtYAAAAJGI4OGNlZDhiLTA2N2MtNGU4Ni1iZGRjLWEzMjI2OGU4NmQwMg.jpg" alt="Profile Picture"></p>
+	<p><img src="noblekoshy.github.io/linkedin_profile_pic.jpg" alt="Profile Picture"></p>
 	<h2>About Me</h2>
-	<p>I am a recent graduate from the University of Minnesota. I graduated with a bachelors in Electrical Engineering and a minor in Business. I have always been interested in technology and how it is transforming our world. I remember growing up with just a simple desktop computer in my home (a HP Pavilion running Windows ME to be precise). Now I see my home filled with smartphones, laptops, tablets, and other smart devices. My educational background has given me a solid background in how such devices and other technologies work both on a hardware and software level. I am now seeking new career opportunities to expand and grow my knowledge. </p>
+	<p>Hi, my name is Noble Koshy and I am a recent graduate from the University of Minnesota. I graduated with a bachelors in Electrical Engineering and a minor in Business. I have always been interested in technology and how it is transforming our world. I remember growing up with just a simple desktop computer in my home (a HP Pavilion running Windows ME to be precise). Now I see my home filled with smartphones, laptops, tablets, and other smart devices. My educational background has given me a solid background in how such devices and other technologies work both on a hardware and software level. I am now seeking new career opportunities to expand and grow my knowledge. </p>
 	<h2>Resume</h2>
 	<p><a href="noblekoshy.github.io/Resume.pdf">Resume PDF</a><p>
 	<p><a href="https://www.linkedin.com/in/noble-koshy/">Linkedin Profile</a></p>
